DTS in MTS file broken
DTS in MTS file is not playing.
http://streams.videolan.org/issues/10244/test_5.m2ts http://streams.videolan.org/issues/10244/bm_tdkr_sample_dts-hd_downconvert_to_dts.m2ts http://streams.videolan.org/issues/10244/GOT_S1E07D.m2ts
Works with avformat demuxer. libdvbpsi related?
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Demuxers: TS Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Demuxers: TS Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Jean-Baptiste Kempf changed the description
changed the description
- Jean-Baptiste Kempf assigned to @funman and unassigned @MigrationBot
assigned to @funman and unassigned @MigrationBot
- Developer
avformat sends 2012 bytes frames dvbpsi sends 511 bytes frames
- Developer
Although our packetizer should reassemble the frames.
- Developer
demuxer doesn't send all the data indeed
- Author Owner
This seems to be a regression.
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0
- Author Owner
More samples uploading...
- Author Owner
See #9855 (closed)
- Jean-Baptiste Kempf changed the description
changed the description
- Developer
DTS packets are not assembled and are trashed because p_data is null. (no queue/start) Queuing is started with wrong data type GOT_S1E07D.m2ts dts pid = 4352 units start with es->data_type = TS_ES_DATA_TABLE_SECTION, as subtitles then
can be seen there too:
130 == 0x82
case 0x82: /* SCTE-27 (sub) */ es_format_Init( fmt, SPU_ES, VLC_CODEC_SCTE_27 ); es->data_type = TS_ES_DATA_TABLE_SECTION;
[00007fd7a0c01748] ts demux debug: * descriptor : unknown (0x88) [00007fd7a0c01748] ts demux debug: * es pid=4113 type=27 dr->i_tag=0x28 [00007fd7a0c01748] ts demux debug: * es pid=4113 type=27 fcc=h264 [00007fd7a0c01748] ts demux debug: * es pid=4352 type=130 fcc=dts [00007fd7a0c01748] ts demux debug: * es pid=4608 type=144 fcc=bdpg [00007fd7a0c01748] ts demux debug: * es pid=4609 type=144 fcc=bdpg
- Developer
DTS Works if i force type 0x85 on that pid
- Developer
we're matching a private stream type 0x82 which seems only relevant for cable. we might need to match PMT as well (0x88 > 0x82 => audio)
- Developer
see there http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/M2TS.html 0x82 is HDMV DTS Audio
- Developer
fixed by commit 60044057
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed
- Jean-Baptiste Kempf mentioned in issue #10724 (closed)
mentioned in issue #10724 (closed)