demux: ts: don't mess with es type (fix #10244)

datatype was changed assuming a cable private type 0x82
without even parsing other registration types.
In that case, it was breaking HDMV which also uses 0x82
for DTS audio.

introduced by 7e3dcdd09c2fac64f00acb360d30f24c74894609